# manim_lace

./: .gitignore  GEMINI.md  README.md  pyproject.toml  test_lace.py  test_rosette.py
manim_lace/: __init__.py  interlacing.py  lace.py  manim_lace.py  rosette.py  swatches.py
