[project]
name = "manim_lace"
version = "0.2.0"
description = "将任意 Manim 路径转换为具有`交错编织`效果的丝带图案"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.0",
]

[tool.ruff]
ignore = [
    "E741", # Ambiguous variable name: `l`
    "F403", # "from module import *" used; unable to detect undefined names
]
line-length = 120

[tool.ruff.lint]
[tool.ruff.lint.per-file-ignores]
"{__init__.py,test*.py,*.ipynb}" = [
    "E402", # module level import not at top of file
    "E731", # do not assign a lambda expression, use a def
    "F401", # unused import
    "F405", # undefined local with import star usage
    "F811", # redefinition of unused name from line N
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
